# tightloop

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
src/: control.rs  lib.rs  llm_provider.rs  markdown_render.rs  prompts.rs  server.rs  syntax_highlight.rs  types.rs  ui.rs  ui_state.rs
src/tools/: executor.rs  mod.rs  prompts.rs  protocol.rs
