[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[dependencies]
anyhow = "1.0"
async-openai = "0.29.3"
async-stream = "0.3.6"
clap = { version = "4.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
dotenvy = "0.15.7"
futures = "0.3"
humansize = "2.1.3"
ignore = "0.4.23"
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
reqwest = "0.12.23"
reqwest-eventsource = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.145"
syntect = "5.3.0"
syntect-tui = "3.0.6"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

